<resources>
  <string name="app_name">Zensoft HR CRM</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="zensoft_hr">Zensoft HR</string>
  <string name="email_holder">hr@zensoft.io</string>
  <string name="requests">Requests</string>
  <string name="vacancies">Vacancies</string>
  <string name="candidates">Candidates</string>
  <string name="interviews">Interviews</string>
  <string name="statistics">Statistics</string>
  <string name="first_name">First Name</string>
  <string name="last_name">Last Name</string>
  <string name="comments">Comments</string>
  <string name="cvs">CV\'s</string>
  <string name="years_of_experience">Years of Experience</string>
  <string name="department">Department</string>
  <string name="attachment">attachment</string>
  <string name="candidate">Candidate</string>
  <string name="date">Date</string>
  <string name="sign_out">Sign out</string>
  <string name="status">status</string>
  <string name="created">created</string>
  <string name="last_published">last published</string>
  <string name="not_defined">not defined</string>
  <string name="user_not_found">user not found</string>
  <string name="date_not_found">date not found</string>
  <string name="comment_not_found">comment not found</string>
  <string name="interviewers">interviewers</string>
  <string name="interviewers_not_found">interviewers not found</string>
  <string name="criteria">Criteria</string>
  <string name="rate">Rate</string>
  <string name="interviewer">Interviewer</string>
  <string name="initial">John Beaver</string>
  <string name="cd_response_null">Candidate response is null</string>
  <string name="candidates_response_null">Candidates list in response is null</string>
  <string name="requests_null">Requests list in response is null</string>
  <string name="vacancies_null">Vacancies list in response is null</string>
  <string name="msg_no_interviews">No interviews found!</string>
  <string name="msg_no_vacancies">No vacancies found!</string>
  <string name="msg_no_candidates">No candidates found!</string>
  <string name="phone">+99677217753</string>
  <string name="btn_save">Save</string>
  <string name="initials_label">Initials</string>
</resources>
