<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_requests"
        android:title="@string/requests"/>
    <item
        android:id="@+id/nav_vacancies"
        android:title="@string/vacancies"/>
    <item
        android:id="@+id/nav_candidates"
        android:title="@string/candidates"/>
    <item
        android:id="@+id/nav_interviews"
        android:title="@string/interviews"/>
    <item
        android:id="@+id/nav_statistics"
        android:title="@string/statistics"/>
  </group>


  <item android:title="">
    <menu>
      <item
          android:id="@+id/nav_sign_out"
          android:icon="@drawable/ic_sign_out"
          android:title="@string/sign_out" />
    </menu>
  </item>
</menu>

