<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">


  <TextView
      android:id="@+id/interview_interviewer_comment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:textColor="@color/main_attributes"
      tools:text="@string/comments"
      />

  <TextView
      android:id="@+id/interview_interviewer_criteria"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="20dp"
      app:layout_constraintTop_toTopOf="@id/interview_interviewer_comment"
      android:textColor="@color/main_attributes"
      android:paddingTop="35dp"
      android:text="@string/criteria"/>

  <TextView
      android:id="@+id/rate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/main_attributes"
      app:layout_constraintBottom_toBottomOf="@+id/interview_interviewer_criteria"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="20dp"
      android:text="@string/rate"/>
</android.support.constraint.ConstraintLayout>