<?xml version="1.0" encoding="utf-8"?><!--<ScrollView--><!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--xmlns:app="http://schemas.android.com/apk/res-auto"--><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <LinearLayout
          android:id="@+id/i_root_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/colorLightBlue"
          android:orientation="vertical">

        <TextView
            android:id="@+id/i_initial_label"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="@string/initials_label"/>

        <TextView
            android:id="@+id/i_initial"
            android:textSize="@dimen/main_attributes"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/initial"/>

        <TextView
            android:id="@+id/i_department_label"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="@string/department"/>

        <TextView
            android:id="@+id/i_department"
            android:textSize="@dimen/main_attributes"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            tools:text="@string/department"/>

        <TextView
            android:id="@+id/i_date_label"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/i_date"
            android:textSize="@dimen/main_attributes"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/date"/>

      </LinearLayout>
    </android.support.v7.widget.CardView>

  </LinearLayout><!--</ScrollView>-->
</ScrollView>