<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <android.support.v7.widget.CardView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <android.support.constraint.ConstraintLayout
        android:background="@color/vacancyItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/vitem_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:textColor="@color/mainAttributes"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:text="Vacancy name"/>

      <View
          android:id="@+id/view"
          android:layout_width="match_parent"
          android:layout_height="3dp"
          android:layout_marginEnd="30dp"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:background="#6ca1f7"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/vitem_name"/>

      <TextView
          android:id="@+id/vitem_status"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:text="@string/status"
          android:textColor="@color/mainAttributes"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/view"/>

      <TextView
          android:id="@+id/vitem_created"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:text="@string/created"
          android:textColor="@color/mainAttributes"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/vitem_status"/>

      <TextView
          android:id="@+id/vitem_last_published"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:text="@string/last_published"
          android:textColor="@color/mainAttributes"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/vitem_created"/>
    </android.support.constraint.ConstraintLayout>
  </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>